Update with latest changes

--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "browserslist": "last 2 versions",
   "dependencies": {
-    "@dashbling/client": "^0.0.1-beta.16",
-    "@dashbling/core": "^0.0.1-beta.16",
-    "dashbling-widget-weather": "^1.0.0",
-    "@dashbling/build-support": "^0.0.1-beta.16"
+    "@dashbling/core": "^0",
+    "@dashbling/client": "^0",
+    "dashbling-widget-weather": "^1.0.0"
+  },
+  "author": "Pascal Widdershoven <pascal@kabisa.nl>",
+  "devDependencies": {
+    "@dashbling/build-support": "^0"
   }
 }
